--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/main_FCV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+    </androidx.fragment.app.FragmentContainerView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/main_BNV"
@@ -22,7 +23,5 @@
         app:itemTextColor="@color/colorOnSecondary"
         app:itemTextAppearanceActive="@style/selectedBNVtextStyle"
         app:itemTextAppearanceInactive="@style/notSelectedBNVtextStyle"/>
-
-    <include layout="@layout/bottom_sheet_history"/>
 
 </RelativeLayout>
