--- a/app/src/main/res/drawable/bs_today_selector.xml
+++ b/app/src/main/res/drawable/bs_today_selector.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_checked="true">
+    <item android:state_checked="true" android:state_selected="true">
         <shape android:shape="rectangle">
             <corners android:radius="16dp"/>
             <solid android:color="@color/colorOnPrimary"/>
             <stroke android:color="@color/colorPrimaryVariant" android:width="2dp"/>
         </shape>
-        <color android:color="@color/colorPrimaryVariant"/>
+        <color android:color="@color/colorOnPrimary"/>
     </item>
 
-    <item android:state_checked="false">
+    <item android:state_checked="false" android:state_selected="false">
         <shape android:shape="rectangle">
             <corners android:radius="16dp"/>
             <solid android:color="@color/colorSecondary"/>
