--- a/app/src/main/res/layout/bottom_sheet_history.xml
+++ b/app/src/main/res/layout/bottom_sheet_history.xml
@@ -87,12 +87,18 @@
                     android:text="2022/10/27" />
 
                 <Button
-                    style="@style/bottomsheetButton"
+                    android:id="@+id/history_today"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/bs_today_selector"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    android:text="오늘" />
+                    android:paddingHorizontal="12dp"
+                    android:paddingVertical="8dp"
+                    android:text="오늘"
+                    android:textSize="12dp"
+                    android:textColor="@color/colorOnPrimary" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -109,13 +115,30 @@
                     android:text="카테고리 선택" />
 
                 <Button
-                    style="@style/bottomsheetButton"
+                    android:id="@+id/history_category1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="5"
+                    android:background="@drawable/bs_today_selector"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    android:text="카테고리1" />
+                    android:paddingHorizontal="12dp"
+                    android:paddingVertical="8dp"
+                    android:text="카테고리"
+                    android:textSize="12dp"
+                    android:textColor="@color/colorOnPrimary" />
+
+                <Button
+                    android:id="@+id/history_category2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bs_today_selector"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:paddingHorizontal="12dp"
+                    android:paddingVertical="8dp"
+                    android:text="카테고리"
+                    android:textSize="12dp"
+                    android:textColor="@color/colorOnPrimary" />
 
             </LinearLayout>
         </LinearLayout>
