--- a/app/src/main/res/layout/activity_show_history.xml
+++ b/app/src/main/res/layout/activity_show_history.xml
@@ -3,8 +3,7 @@
     style="@style/history_dialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:background="@color/colorPrimary">
+    android:layout_margin="16dp">
 
     <RelativeLayout
         android:id="@+id/layout_history_title"
