--- a/app/src/main/res/drawable/bs_search_shape.xml
+++ b/app/src/main/res/drawable/bs_search_shape.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="16dp"/>
     <stroke android:color="@color/colorPrimaryVariant" android:width="2dp"/>
+    <padding android:top="12dp" android:bottom="12dp" android:left="12dp" android:right="12dp"/>
 </shape>
