--- a/app/src/main/res/layout/activity_set_history.xml
+++ b/app/src/main/res/layout/activity_set_history.xml
@@ -3,159 +3,284 @@
     style="@style/history_dialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:background="@color/colorPrimary">
+    android:layout_margin="16dp">
 
-        <RelativeLayout
-            android:id="@+id/layout_history_title"
+    <RelativeLayout
+        android:id="@+id/layout_history_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/dialog_history_detail"
+        android:padding="4dp">
+
+        <ImageView
+            android:id="@+id/history_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginHorizontal="4dp"
+            android:src="@drawable/ic_baseline_history_edu_24" />
+
+        <TextView
+            android:id="@+id/history_statusbar"
+            style="@style/dailyRecyclerTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/dialog_history_detail"
-            android:padding="4dp">
+            android:layout_centerVertical="true"
+            android:layout_marginVertical="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="12dp"
+            android:layout_toLeftOf="@+id/history_close"
+            android:layout_toRightOf="@+id/history_icon"
+            android:ellipsize="end"
+            android:text="히스토리 수정"
+            android:textColor="@color/colorOnPrimary"
+            android:textSize="20dp" />
 
-            <ImageView
-                android:id="@+id/history_icon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginHorizontal="4dp"
-                android:src="@drawable/ic_baseline_history_edu_24"/>
+        <ImageView
+            android:id="@+id/history_close"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="4dp"
+            android:src="@drawable/ic_baseline_close_24" />
 
-            <TextView
-                android:id="@+id/history_statusbar"
-                style="@style/dailyRecyclerTitleStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginVertical="8dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="12dp"
-                android:layout_toLeftOf="@+id/history_close"
-                android:layout_toRightOf="@+id/history_icon"
-                android:ellipsize="end"
-                android:text="히스토리"
-                android:textColor="@color/colorOnPrimary"
-                android:textSize="20dp" />
+    </RelativeLayout>
 
-            <ImageView
-                android:id="@+id/history_close"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="4dp"
-                android:src="@drawable/ic_baseline_close_24" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/layout_history_title"
+        android:background="@drawable/dialog_history_detail_2"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        </RelativeLayout>
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/layout_history_title"
-            android:background="@drawable/dialog_history_detail_2"
-            android:padding="12dp">
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/history_title_edit"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="4dp"
+                android:background="@null"
+                android:hint="히스토리 제목 입력"
+                android:maxLines="1"
+                android:text="기존 히스토리 제목"
+                android:textColor="@color/colorOnSecondary"
+                android:textColorHint="@color/colorOnSecondary"
+                android:textCursorDrawable="@color/colorPrimaryVariant" />
+
+            <ImageView
+                android:id="@+id/history_color_picker"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_baseline_circle_24"
+                android:layout_gravity="right"
+                android:layout_marginHorizontal="8dp"/>
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="12dp"
+            android:background="@color/colorPrimaryVariant" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_history_title"
+            android:layout_marginHorizontal="4dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/history_title"
+                android:id="@+id/history_date_edit"
                 style="@style/history_dialog_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginRight="8dp"
-                android:text="히스토리 제목"
-                android:layout_marginVertical="6dp"
                 android:fontFamily="@font/nexonlv1_bold"
-                android:textSize="20sp"/>
+                android:text="2022/11/03"
+                android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/history_category"
-                style="@style/history_dialog_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginRight="8dp"
-                android:layout_toLeftOf="@+id/history_date"
-                android:layout_below="@+id/history_title"
-                android:text="카테고리명" />
-
-            <TextView
-                android:id="@+id/history_date"
-                style="@style/history_dialog_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="right"
-                android:text="2022.10.15"
-                android:layout_alignBottom="@+id/history_category"/>
-
-            <androidx.core.widget.NestedScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/history_category"
-                android:layout_above="@+id/history_edit"
-                android:layout_marginVertical="16dp"
-                android:layout_marginHorizontal="12dp"
-                android:scrollbars="none">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/history_image"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/img_sample" />
-
-                    <TextView
-                        android:id="@+id/history_memo"
-                        style="@style/history_dialog_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/history_image"
-                        android:text="해당 히스토리에 대한 메모"
-                        android:paddingHorizontal="8dp"
-                        android:layout_marginTop="8dp"/>
-
-                </RelativeLayout>
-
-            </androidx.core.widget.NestedScrollView>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <Button
-                android:id="@+id/history_edit"
+                android:id="@+id/history_date_today"
+                style="@style/button_basic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginLeft="60dp"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/bs_today_selector"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="8dp"
-                android:text="수정"
-                android:textColor="@color/colorOnPrimary" />
+                android:text="오늘"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="12dp"
+            android:background="@color/colorPrimaryVariant" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_history_title"
+            android:layout_marginHorizontal="4dp"
+            android:orientation="horizontal">
 
             <Button
-                android:id="@+id/history_ok"
+                android:id="@+id/history_cate1"
+                style="@style/button_basic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="right"
-                android:layout_marginRight="60dp"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/bs_today_selector"
-                android:gravity="right"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="8dp"
-                android:text="확인"
-                android:textColor="@color/colorOnPrimary" />
+                android:layout_margin="4dp"
+                android:text="카테고리1"
+                android:textSize="16sp" />
 
-        </RelativeLayout>
+            <Button
+                android:id="@+id/history_cate2"
+                style="@style/button_basic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:text="카테고리2"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/history_add_category"
+                style="@style/button_basic"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="4dp"
+                android:backgroundTint="@color/colorOnPrimary"
+                android:foreground="@drawable/ic_baseline_add_24"
+                android:foregroundTint="@color/colorPrimaryVariant"
+                android:text=""
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="12dp"
+            android:background="@color/colorPrimaryVariant" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/history_image"
+                android:layout_width="240dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:scaleType="centerInside"
+                android:src="@drawable/img_sample" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="8dp"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/history_add_image"
+                    style="@style/button_basic"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="4dp"
+                    android:backgroundTint="@color/colorOnPrimary"
+                    android:foreground="@drawable/ic_baseline_add_24"
+                    android:foregroundTint="@color/colorPrimaryVariant"
+                    android:text=""
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/history_delete_image"
+                    style="@style/button_basic"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="4dp"
+                    android:backgroundTint="@color/colorOnPrimary"
+                    android:foreground="@drawable/ic_baseline_delete_outline_24"
+                    android:foregroundTint="@color/colorPrimaryVariant"
+                    android:text=""
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="12dp"
+            android:background="@color/colorPrimaryVariant" />
+
+        <EditText
+            android:id="@+id/history_memo_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minLines="10"
+            android:scrollbars="vertical"
+            android:overScrollMode="ifContentScrolls"
+            android:layout_marginHorizontal="4dp"
+            android:background="@null"
+            android:hint="히스토리 제목 입력"
+            android:text="기존 히스토리 메모"
+            android:textColor="@color/colorOnSecondary"
+            android:textColorHint="@color/colorOnSecondary"
+            android:textCursorDrawable="@color/colorPrimaryVariant"/>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginHorizontal="60dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
+
+            <Button
+                android:id="@+id/history_done"
+                style="@style/button_basic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="완료" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/history_cancel"
+                style="@style/button_basic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="취소" />
+
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
