--- a/app/src/main/res/layout/goallist_recycler_item.xml
+++ b/app/src/main/res/layout/goallist_recycler_item.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="wrap_content">
+
+    <RelativeLayout
+        android:id="@+id/goallist"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/daily_recycler_item_civ"
@@ -15,31 +21,21 @@
         android:id="@+id/daily_recycler_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="소목표"
+        android:text="대목표"
         style="@style/dailyRecyclerTitleStyle"
         android:layout_toRightOf="@id/daily_recycler_item_civ"
-        android:layout_alignBottom="@id/daily_recycler_item_civ"
+        android:layout_centerVertical="true"
         android:maxLines="1"
         android:ellipsize="end"/>
 
-    <TextView
-        android:id="@+id/daily_recycler_item_subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="연관된 대목표"
-        style="@style/dailyRecyclerSubtitleStyle"
-        android:layout_alignLeft="@+id/daily_recycler_item_title"
-        android:layout_below="@+id/daily_recycler_item_title"
-        android:maxLines="1"
-        android:ellipsize="end"/>
 
     <TextView
         android:id="@+id/daily_recycler_item_dday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="D-22"
-        android:layout_alignParentRight="true"
-        android:layout_margin="12dp"
+        android:layout_toLeftOf="@id/goallist_show_more"
+        android:layout_marginVertical="12dp"
         style="@style/dailyRecyclerTitleStyle"
         android:textSize="16dp"
         android:textAlignment="viewEnd"/>
@@ -49,10 +45,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="100%"
-        android:layout_alignParentRight="true"
-        android:layout_margin="12dp"
+        android:layout_toLeftOf="@id/goallist_show_more"
+        android:layout_marginVertical="12dp"
         style="@style/dailyRecyclerTitleStyle"
         android:layout_alignParentBottom="true"/>
+
+        <ImageView
+            android:id="@+id/goallist_show_more"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/selector_goallist_show_detail"
+            android:layout_alignParentRight="true"
+            app:tint="@color/colorPrimary"
+            android:layout_centerVertical="true"/>
+
 
     <View
         android:layout_width="match_parent"
@@ -60,5 +66,14 @@
         android:background="@color/colorPrimary"
         android:layout_alignParentBottom="true"
         android:layout_marginHorizontal="10dp" />
+
+    </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/goallist"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="16dp"/>
 
 </RelativeLayout>
