--- a/app/src/main/res/layout/fragment_daily_add_todo.xml
+++ b/app/src/main/res/layout/fragment_daily_add_todo.xml
@@ -4,11 +4,10 @@
     style="@style/history_dialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:background="@color/colorPrimary">
+    android:layout_margin="16dp">
 
     <RelativeLayout
-        android:id="@+id/layout_history_title"
+        android:id="@+id/layout_add_todo_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/dialog_history_detail"
@@ -24,7 +23,7 @@
             android:src="@drawable/ic_baseline_history_edu_24" />
 
         <TextView
-            android:id="@+id/history_statusbar"
+            android:id="@+id/add_todo_statusbar"
             style="@style/dailyRecyclerTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,19 +52,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/layout_history_title"
+        android:background="@drawable/dialog_history_detail_2"
+        android:layout_below="@+id/layout_add_todo_title"
         android:orientation="vertical"
         android:padding="16dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/layout_history_title"
             android:layout_gravity="center"
             android:layout_marginHorizontal="4dp"
             android:orientation="horizontal">
 
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+
             <TextView
+                android:id="@+id/todo_date_edit"
                 style="@style/history_dialog_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -74,15 +80,21 @@
                 android:fontFamily="@font/nexonlv1_bold"
                 android:gravity="center"
                 android:text="2022/11/03"
-                android:textSize="20sp" />
+                android:textSize="24sp" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
 
             <Button
-                android:id="@+id/history_today"
+                android:id="@+id/todo_date_today"
                 style="@style/button_basic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="오늘"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:gravity="right"/>
 
         </LinearLayout>
 
@@ -99,26 +111,23 @@
             android:orientation="horizontal">
 
             <Spinner
+                android:id="@+id/todo_goallist_main"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:spinnerMode="dialog"
-                android:textAlignment="center" />
+                android:textAlignment="center"/>
 
 
             <Spinner
+                android:id="@+id/todo_goallist_sub"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:spinnerMode="dialog"
                 android:textAlignment="center" />
 
-            <Spinner
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:spinnerMode="dialog"
-                android:textAlignment="center" />
+
         </LinearLayout>
 
         <View
@@ -129,10 +138,21 @@
             android:background="@color/colorPrimaryVariant" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center">
+
+            <Spinner
+                android:id="@+id/todo_goallist_task"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:spinnerMode="dialog"
+                android:textAlignment="center"
+                android:layout_marginHorizontal="16dp"
+                android:gravity="center"
+                android:layout_gravity="center"/>
 
             <TextView
                 style="@style/history_dialog_text"
@@ -142,6 +162,7 @@
                 android:text="의 달성량" />
 
             <TextView
+                android:id="@+id/todo_task_count"
                 style="@style/history_dialog_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -157,7 +178,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="개" />
+                android:text="개"
+                android:layout_marginRight="16dp"/>
 
 
         </LinearLayout>
@@ -170,6 +192,7 @@
             android:background="@color/colorPrimaryVariant" />
 
         <EditText
+            android:id="@+id/todo_memo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="4dp"
@@ -192,7 +215,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/history_cancel"
+                android:id="@+id/todo_cancel"
                 style="@style/button_basic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -204,7 +227,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/history_add_list"
+                android:id="@+id/todo_add_list"
                 style="@style/button_basic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -216,7 +239,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/history_ok"
+                android:id="@+id/todo_add_all"
                 style="@style/button_basic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -233,6 +256,7 @@
             android:background="@color/colorPrimaryVariant" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/todo_list_to_add_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
